// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterContent > applies correct icon classes 1`] = `
<div
  class="mx-auto w-full flex-col flex flex flex-col gap-2"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
    data-selected="true"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="layers-icon"
    >
      Layers
    </div>
    <span
      class=""
    >
      All
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="sticky-note-icon"
    >
      StickyNote
    </div>
    <span
      class=""
    >
      Posts
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="newspaper-icon"
    >
      Newspaper
    </div>
    <span
      class=""
    >
      Articles
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="image-icon"
    >
      Image
    </div>
    <span
      class=""
    >
      Images
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="circle-play-icon"
    >
      CirclePlay
    </div>
    <span
      class=""
    >
      Videos
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="link-icon"
    >
      Link
    </div>
    <span
      class=""
    >
      Links
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="download-icon"
    >
      Download
    </div>
    <span
      class=""
    >
      Files
    </span>
  </p>
</div>
`;

exports[`FilterContent > applies correct styling classes 1`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="layers-icon"
  >
    Layers
  </div>
  <span
    class=""
  >
    All
  </span>
</p>
`;

exports[`FilterContent > applies correct styling classes 2`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="sticky-note-icon"
  >
    StickyNote
  </div>
  <span
    class=""
  >
    Posts
  </span>
</p>
`;

exports[`FilterContent > renders with correct icons 1`] = `
<div
  class="mx-auto w-full flex-col flex flex flex-col gap-2"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
    data-selected="true"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="layers-icon"
    >
      Layers
    </div>
    <span
      class=""
    >
      All
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="sticky-note-icon"
    >
      StickyNote
    </div>
    <span
      class=""
    >
      Posts
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="newspaper-icon"
    >
      Newspaper
    </div>
    <span
      class=""
    >
      Articles
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="image-icon"
    >
      Image
    </div>
    <span
      class=""
    >
      Images
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="circle-play-icon"
    >
      CirclePlay
    </div>
    <span
      class=""
    >
      Videos
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="link-icon"
    >
      Link
    </div>
    <span
      class=""
    >
      Links
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="download-icon"
    >
      Download
    </div>
    <span
      class=""
    >
      Files
    </span>
  </p>
</div>
`;

exports[`FilterContent > renders with custom selected tab 1`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="circle-play-icon"
  >
    CirclePlay
  </div>
  <span
    class=""
  >
    Videos
  </span>
</p>
`;

exports[`FilterContent > renders with default selected tab 1`] = `
<div
  class="mx-auto w-full flex-col flex flex flex-col gap-4 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    data-slot="filter-header"
    data-testid="filter-header"
  >
    <h2
      class="text-2xl font-bold text-foreground text-muted-foreground font-light"
      data-testid="heading-2"
    >
      Content
    </h2>
  </div>
  <div
    class="mx-auto w-full flex-col flex flex flex-col gap-2"
    data-slot="filter-list"
    data-testid="filter-list"
  >
    <p
      class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <div
        class="w-5 h-5"
        data-testid="layers-icon"
      >
        Layers
      </div>
      <span
        class=""
      >
        All
      </span>
    </p>
    <p
      class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <div
        class="w-5 h-5"
        data-testid="sticky-note-icon"
      >
        StickyNote
      </div>
      <span
        class=""
      >
        Posts
      </span>
    </p>
    <p
      class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <div
        class="w-5 h-5"
        data-testid="newspaper-icon"
      >
        Newspaper
      </div>
      <span
        class=""
      >
        Articles
      </span>
    </p>
    <p
      class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <div
        class="w-5 h-5"
        data-testid="image-icon"
      >
        Image
      </div>
      <span
        class=""
      >
        Images
      </span>
    </p>
    <p
      class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <div
        class="w-5 h-5"
        data-testid="circle-play-icon"
      >
        CirclePlay
      </div>
      <span
        class=""
      >
        Videos
      </span>
    </p>
    <p
      class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <div
        class="w-5 h-5"
        data-testid="link-icon"
      >
        Link
      </div>
      <span
        class=""
      >
        Links
      </span>
    </p>
    <p
      class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <div
        class="w-5 h-5"
        data-testid="download-icon"
      >
        Download
      </div>
      <span
        class=""
      >
        Files
      </span>
    </p>
  </div>
</div>
`;

exports[`FilterContent > rerenders with different selected tabs 1`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="layers-icon"
  >
    Layers
  </div>
  <span
    class=""
  >
    All
  </span>
</p>
`;

exports[`FilterContent > rerenders with different selected tabs 2`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="sticky-note-icon"
  >
    StickyNote
  </div>
  <span
    class=""
  >
    Posts
  </span>
</p>
`;

exports[`FilterContent > rerenders with different selected tabs 3`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="layers-icon"
  >
    Layers
  </div>
  <span
    class=""
  >
    All
  </span>
</p>
`;

exports[`FilterContent > rerenders with different selected tabs 4`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="circle-play-icon"
  >
    CirclePlay
  </div>
  <span
    class=""
  >
    Videos
  </span>
</p>
`;

exports[`FilterContent > shows correct visual state for selected and unselected tabs 1`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="sticky-note-icon"
  >
    StickyNote
  </div>
  <span
    class=""
  >
    Posts
  </span>
</p>
`;

exports[`FilterContent > shows correct visual state for selected and unselected tabs 2`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="layers-icon"
  >
    Layers
  </div>
  <span
    class=""
  >
    All
  </span>
</p>
`;
